# gps-data-logger

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/bme280_debug_20250223/: index.md  metadata.json  plan.md  spec.md
docs/: hardware.md  software.md  wireless.md
main/: CMakeLists.txt  ble_manager.c  ble_manager.h  bme280_handler.c  bme280_handler.h  button_handler.c  button_handler.h  config_manager.c  config_manager.h  gps_config.c  gps_config.h  gps_parser.c  gps_parser.h  gpx_formatter.c  gpx_formatter.h  hw_config.c  hw_config.h  i2c_manager.c  i2c_manager.h  logger_task.c  logger_task.h  mag_handler.c  mag_handler.h  main.c  oled_handler.c  oled_handler.h  sd_card_handler.c  sd_card_handler.h  system_manager.c  system_manager.h  telemetry.h  telemetry_task.c  telemetry_task.h  ui_task.c  ui_task.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
main/ssd1306/: ssd1306_i2c.c
ref materials/: GPS_esp8266.ino  Project Specifications.md
tests/: mock_esp_idf.h  test_ble_manager.c  test_bme280_handler  test_bme280_handler.c  test_button_handler  test_button_handler.c  test_gps_parser  test_gps_parser.c  test_gpx_formatter  test_gpx_formatter.c  test_i2c_manager  test_i2c_manager.c  test_logger_task  test_logger_task.c  test_sd_card_handler  test_sd_card_handler.c  test_telemetry  test_telemetry.c  test_telemetry_task  test_telemetry_task.c
tests/fakes/: esp_err.h  esp_log.h  esp_timer.h  esp_vfs_fat.h  sdmmc_cmd.h
tests/fakes/driver/: gpio.h  (+1 more)
(+42 files in other folders)
